--- a/changelog/76.trivial.rst
+++ b/changelog/76.trivial.rst
@@ -1,1 +1,1 @@
-Updated the init of `HttpJsonRequest` to raise a nicer message if the URL fails to open.
+Updated the init of `drms.json.HttpJsonRequest` to raise a nicer message if the URL fails to open.
